# dropbox_backup_to_external_disk_1

./: .auto_version_from_date.json  Cargo.toml  Makefile.toml  README.md  Untitled-1.txt  cache24.txt  how_to_run.md  temp24.txt
.github/workflows/: rust.yml
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: main.rs
data/: base_local_path.csv  compare_for_delete.csv  compare_for_dn.csv  list_for_delete.csv  list_for_download.csv
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/dropbox_backup_to_external_disk/: all.html  enum.RemoteKind.html  fn.add2_just_downloaded_to_list_local.html  fn.add_just_downloaded_to_list_local.html  fn.all_list_remote_and_local.html  fn.at_line.html  fn.at_pos.html  fn.byte_pos_from_chars.html  fn.clear_line.html  fn.compare2_lists.html  fn.compare_lists.html  fn.compare_lists_internal.html  fn.copy_from_list2_for_download.html  fn.correct_time_from_list.html  fn.correct_time_from_list_internal.html  fn.download.html  fn.download_from_list.html  fn.download_one_file.html  fn.download_with_client.html  fn.get_pos.html  fn.get_short_lived_access_token.html  fn.hide_cursor.html  fn.list2_local.html  fn.list_and_sync.html  fn.list_local.html  fn.list_remote.html  fn.list_remote_folder.html  fn.move_or_rename_local_files.html  fn.ns_elapsed.html  fn.ns_print_ms.html  fn.ns_print_ns.html  fn.ns_start.html  fn.press_enter_to_continue_timeout_5_sec.html  fn.remote_content_hash.html  fn.save2_base_path.html  fn.save_base_path.html  fn.second_backup.html  fn.shorten_string.html  fn.sort_remote_list_and_write_to_file.html  fn.sort_string_lines.html  (+18 more)
docs/dropbox_backup_to_external_disk/local_mod/: enum.RemoteKind.html  fn.add2_just_downloaded_to_list_local.html  fn.add_just_downloaded_to_list_local.html  fn.add_just_downloaded_to_list_local_internal.html  fn.copy_from_list2_for_download.html  fn.correct_time_from_list.html  fn.correct_time_from_list_internal.html  fn.list2_local.html  fn.list_local.html  fn.list_local_internal.html  fn.move_internal.html  fn.move_or_rename_local_files.html  fn.move_or_rename_local_files_internal.html  fn.save2_base_path.html  fn.save_base_path.html  fn.trash2_from_list.html  fn.trash_from_list.html  fn.trash_from_list_internal.html  index.html  sidebar-items.js
docs/dropbox_backup_to_external_disk/remote_mod/: fn.download.html  fn.download_from_list.html  fn.download_internal.html  fn.download_one_file.html  fn.download_with_client.html  fn.get_short_lived_access_token.html  fn.list_directory.html  fn.list_remote.html  fn.list_remote_folder.html  fn.remote_content_hash.html  fn.sort_remote_list_and_write_to_file.html  fn.test_connection.html  index.html  sidebar-items.js  struct.DirectoryIterator.html
docs/dropbox_backup_to_external_disk/utils_mod/: fn.__stability.html  fn.__static_ref_initialize.html  (+27 more)
images/: screen_design_1.txt  screen_design_2.txt
src/: lib.rs  local_mod.rs  remote_mod.rs  terminal_ansi_mod.rs  utils_mod.rs
(+15 files in other folders)
