
[package]
name = "automation_tasks_rs"
version = "0.1.1"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description = "cargo auto - automation tasks written in Rust language"
publish = false

[dependencies]
cargo_auto_lib = "0.7.8"
octocrab = "0.12.0"
unwrap="1.2.1"
reqwest={version="0.11.4", features=["stream"]}
tokio-util = "0.6.7"
tokio = {version = "1.10.0", features = ["fs"]}